--- a/map.html
+++ b/map.html
@@ -20,7 +20,7 @@
         var boatTrackPolyline = new BMap.Polyline([], { strokeColor: "blue", strokeWeight: 3, strokeOpacity: 0.7 });
         // 创建地图实例
         var map = new BMap.Map("container");  
-        map.centerAndZoom(new BMap.Point(100.939631, 33.078577), 2);  // 初始化地图，设置中心点坐标和地图级别
+        map.centerAndZoom(new BMap.Point(119.939631, 32.078577), 3);  // 初始化地图，设置中心点坐标和地图级别
         map.enableScrollWheelZoom(); // 开启滚轮缩放
         map.disableDoubleClickZoom();
         map.addControl(new BMap.NavigationControl({ type: BMAP_NAVIGATION_CONTROL_LARGE, showZoomInfo: true }));
@@ -71,6 +71,13 @@
             map.removeOverlay(boatTrackPolyline);
         }
 
+        // 清除船只标记
+        function clearBoatMarker() {
+            if (boatMarker) {
+                map.removeOverlay(boatMarker);  // 移除船只标记
+                boatMarker = null;  // 清空标记
+            }
+        }
         // 使用Qt WebChannel与Qt代码交互
         new QWebChannel(qt.webChannelTransport, function(channel) {
             window.bridge = channel.objects.passId;  // 注册一个通道，将window.bridge连接到qt下的passId，形成通路
